[package]
name = "whvp-emulator"
version = "0.1.0"
authors = ["Damien Aumaitre <daumaitre@quarkslab.com>"]
edition = "2018"
default-run = "whvp"

[dependencies]
whvp-sys = { path = "lib/whvp-sys" }
structopt = "*"
serde_json = "*"
serde = { version = "1.0", features = ["derive"] }
notify = "=5.0.0-pre.1"
crossbeam-channel = "0.3.9"
zydis = "3.0"
lain = { git = "https://github.com/Knight-Ops/lain" }
fnv = "1"
ni_rs = { git = "https://github.com/ctfhacker/ni-rs" }
bitflags = "1"
smallvec = "0.6"
ctrlc = "*"
ctor = "*"

[lib]
name = "whvp"
crate-type = ["cdylib"]

[[bin]]
name = "whvp"
path = "src/main.rs"

[dependencies.pyo3]
version = "0.8.2"
features = ["extension-module"]